tests/NormalTests/paczka1/fuzzy1/96437756.err
Error in line 2: ZRvZ6ssP S70 63,2
Error in line 31: S2T S70 86,7
